// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageContentComposition /> renders correctly 1`] = `
<styled.div>
  <ErrorBoundary
    messageOnScreen="Something has gone terribly wrong here bhuuaaa"
  >
    <WithTheme(l)>
      <title>
        A headng
      </title>
    </WithTheme(l)>
    <WithTheme(Component)
      breadcrumb={Array []}
      dashboardButtonHref=""
      dashboardButtonText="Dashboard"
      dashboardUrl="/"
      innerClass="container header"
      outerClass="container-fluid"
      show={true}
      showDashboardIcon={true}
      title=""
    />
    <ContentBody>
      <ErrorBoundary
        messageOnScreen={null}
      >
        <Connect(ArrearsNotifications) />
      </ErrorBoundary>
      <ErrorBoundary
        messageOnScreen={null}
      >
        <div
          className="row"
        >
          Hello
        </div>
      </ErrorBoundary>
    </ContentBody>
  </ErrorBoundary>
</styled.div>
`;

exports[`<PageContentComposition /> renders correctly when loading 1`] = `
<p
  isSmall={false}
/>
`;

exports[`<PageContentComposition /> renders correctly with a ribbon 1`] = `
<styled.div>
  <ErrorBoundary
    messageOnScreen="Something has gone terribly wrong here bhuuaaa"
  >
    <WithTheme(l)>
      <title>
        A different heading
      </title>
    </WithTheme(l)>
    <WithTheme(Component)
      breadcrumb={Array []}
      dashboardButtonHref=""
      dashboardButtonText="Dashboard"
      dashboardUrl="/"
      innerClass="container header"
      outerClass="container-fluid"
      show={true}
      showDashboardIcon={true}
      title="A different heading"
    />
    <ContentBody>
      <ErrorBoundary
        messageOnScreen={null}
      >
        <Connect(ArrearsNotifications) />
      </ErrorBoundary>
      <ErrorBoundary
        messageOnScreen={null}
      >
        <div
          className="row"
        >
          Hello
        </div>
      </ErrorBoundary>
    </ContentBody>
  </ErrorBoundary>
</styled.div>
`;
